--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -8,7 +8,7 @@ $kaldi-red-invert: #fff
 $primary: $kaldi-red
 $primary-invert: $kaldi-red-invert
 $body-color: #333
-$black: #2b2523
+$black: #F15434
 
 .navbar .navbar-menu
   box-shadow:none !important
