--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -122,6 +122,12 @@ $menu-label-color: $white-ter
   flex-basis: 35%;
   margin: 0 1.5em 0 0;
 
+.post-preview
+  padding: 10px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0px 0px 5px 3px rgba(199,193,199,1);
+  -moz-box-shadow: 0px 0px 5px 3px rgba(199,193,199,1);
+  box-shadow: 0px 0px 5px 3px rgba(199,193,199,1);
 
 @import "~bulma"
 
