--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -123,11 +123,18 @@ $menu-label-color: $white-ter
   margin: 0 1.5em 0 0;
 
 .post-preview
-  padding: 10px;
+  padding: 20px;
   border-radius: 8px;
   -webkit-box-shadow: 0px 0px 5px 3px rgba(199,193,199,1);
   -moz-box-shadow: 0px 0px 5px 3px rgba(199,193,199,1);
   box-shadow: 0px 0px 5px 3px rgba(199,193,199,1);
+
+.post-wrapper-button
+  background: none;
+  border: none;
+  width: 100%;
+  border-radius: 8px;
+  padding: 0;
 
 @import "~bulma"
 
