--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -136,6 +136,9 @@ $menu-label-color: $white-ter
   border-radius: 8px;
   padding: 0;
 
+.menu-list li
+  display: inline-block
+
 @import "~bulma"
 
 
