--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,6 +10,10 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #F15434
 
+.page
+  padding: 20px
+  margin: 20px
+
 .navbar .navbar-menu
   box-shadow:none !important
 
